# LingmoOS

./: .gitmessage.txt  .gitmodules  CHANGELOG.html  CHANGES  Config.in  Config.in.legacy  LICENSE.md  Makefile  Makefile.am  Makefile.in  Makefile.legacy  README.md  build-all.sh  build.sh  change_log.txt  configure.ac  core_extra.build  default.xml  repo
core/: .gitignore  CMakeLists.txt  PKGBUILD  x11utils.h
core/.devcontainer/: devcontainer.json
core/.github/workflows/: Auto CI Test Build.yml  build.yml  lingmo-core.yml
core/Desktop/: Lingmo
core/base/autoconf/: build.lpm
core/base/automake/: build.lpm
core/base/base/: build.lpm
core/base/bash-5.2.21/: build.lpm
core/base/binutils/: PKGBUILD
core/base/bison/: PKGBUILD  build.lpm
core/base/bzip2/: PKGBUILD  build.lpm
core/base/coreutils/: PKGBUILD  build.lpm
core/base/debugedit/: build.lpm
core/base/fakeroot/: .SRCINFO  build.lpm
core/base/file/: build.lpm
core/base/findutils/: PKGBUILD  build.lpm
core/base/flex/: .nvchecker.toml  PKGBUILD  build.lpm
core/base/gawk/: PKGBUILD  build.lpm
core/base/gcc/: PKGBUILD  build.lpm
core/base/gettext/: PKGBUILD  build.lpm
core/base/glibc/: PKGBUILD  build.lpm
core/base/grep/: build.lpm
core/base/groff/: build.lpm
core/base/gzip/: build.lpm
core/base/iproute2/: PKGBUILD
core/base/iputils/: build.lpm
core/base/libtool/: PKGBUILD
core/base/licenses/: build.lpm
core/base/lingmo-base-common/: PKGBUILD  build.lpm  os-release  sysctl
core/base/m4/: PKGBUILD  build.lpm
core/base/make/: build.lpm
core/base/patch/: PKGBUILD  build.lpm
core/base/pciutils/: PKGBUILD
core/chotkeys/: CMakeLists.txt  application.cpp  application.h  hotkeys.cpp  hotkeys.h  main.cpp
core/clipboard/: CMakeLists.txt
core/cpufreq/: CMakeLists.txt
core/cupdatecursor/: CMakeLists.txt  main.cpp
core/debian/: changelog  control
core/gmenuproxy/: CMakeLists.txt  actions.h  dbusmenuadaptor.cpp  dbusmenuadaptor.h  menu.cpp  menuproxy.cpp  menuproxy.h  window.cpp  window.h
core/lpm-extra/: CHANGES.md  README.md  build.lpm  configure.ac
core/lpm-pkg-sources/: build.lpm  pkg_sources.list
core/notificationd/: CMakeLists.txt  com.lingmo.Notification.xml  datehelper.cpp  historymodel.cpp  notificationpopup.cpp  notificationsmodel.h  notificationwindow.cpp  utils.cpp  utils.h
core/polkit-agent/: Button.qml  CMakeLists.txt  TextField.qml  dialog.cpp  main.cpp  main.qml  qml.qrc
core/powerman/: CMakeLists.txt  application.h  dimdisplayaction.cpp  dimdisplayaction.h
core/screen-brightness/: CMakeLists.txt  brightnesshelper.cpp
core/sddm-helper/: CMakeLists.txt
core/session/: CMakeLists.txt  application.cpp  com.lingmo.Session.xml  main.cpp  networkproxymanager.cpp  processmanager.cpp  processmanager.h
core/settings-daemon/: CMakeLists.txt  application.cpp  application.h  dbusadaptor.h
core/shutdown-ui/: CMakeLists.txt  actions.h  main.cpp  main.qml
core/xembed-sni-proxy/: CMakeLists.txt  README.md  fdoselectionmanager.cpp  sniproxy.cpp  sniproxy.h  xcbutils.h
core32/interactiveconsole/: CMakeLists.txt  interactiveconsole.cpp
core32/login-sessions/: CMakeLists.txt  install-sessions.sh.cmake  lingmox11-dev.desktop.cmake  lingmox11.desktop.cmake  startlingmo-dev.sh.cmake
core32/lookandfeel/: CMakeLists.txt
core32/startshell/: CMakeLists.txt  startlingmo-wayland.cpp  startlingmo-x11.cpp  startplasma.cpp
fm/: CMakeLists.txt  README.md  application.cpp  dbusinterface.cpp  lingmo-filemanager  lingmo-filemanager.desktop  main.cpp  window.h
fm/cio/: cfilesizejob.h
fm/debian/: changelog  control  copyright
fm/desktop/: desktop.cpp  desktop.h  desktopsettings.cpp  desktopsettings.h  dockdbusinterface.cpp
fm/dialogs/: createfolderdialog.cpp  createfolderdialog.h  deletedialog.h
fm/dragdrop/: CMakeLists.txt  qmldir
fm/filemanager/: CMakeLists.txt  qmldir
fm/helper/: filelauncher.cpp  filelauncher.h  fm.h  keyboardsearchmanager.h  shortcut.cpp  shortcut.h
fm/mimetype/: xdgdesktopfile.cpp  xdgdesktopfile.h
fm/model/: pathbarmodel.h  placesitem.cpp  placesmodel.h
fm/qml/: FolderGridItem.qml  FolderListItem.qml  FolderPage.qml  GlobalSettings.qml  PathBar.qml  SideBar.qml  qml.qrc
fm/runtime/: runtime.cpp  runtime.h
fm/thumbnailer/: thumbnailcache.cpp  thumbnailprovider.cpp
fm/translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  lv_LV.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  (+5 more)
fm/widgets/: rubberband.cpp  rubberband.h
guide/: CMakeLists.txt
guide/debian/: changelog  control  copyright
guide/src/: appearance.cpp  appearance.h  main.cpp  resources.qrc  setup.cpp  setup.h  version.cpp  version.h
guide/translations/: en_US.ts  zh_CN.ts
lingmo-qt-plugins/: .kodiak.toml  CMakeLists.txt  README.md
lingmo-qt-plugins/cmake/: FindQt6ThemeSupport.cmake
lingmo-qt-plugins/debian/: control  rules
lingmo-qt-plugins/platformtheme/: CMakeLists.txt  main.cpp  platformtheme.cpp  platformtheme.h  x11integration.cpp
lingmo-qt-plugins/widgetstyle/: CMakeLists.txt  basestyle.h  blurhelper.cpp  lingmostyle.json  pstyleplugin.cpp  pstyleplugin.h  shadowhelper.cpp
posic/: CMakeLists.txt  dock_page.cpp  dock_page.h  finish_page.cpp  finish_page.h  main.cpp  ripple_button.cpp  ripple_button.h  theme_page.cpp  theme_page.h  translations.qrc  welcome.pro  welcome.qrc  welcome_manager.cpp  welcome_manager.h  welcome_window.cpp  welcome_window.h
posic/debian/: changelog  control  copyright  rules
posic/translations/: fr_FR.ts  ja_JP.ts  ko_KR.ts  ru_RU.ts  zh_CN.qm  zh_CN.ts  zh_TW.ts
server/asyncjobprog/: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  KF5JobWidgetsConfig.cmake.in
server/config_widgets/: .kde-ci.yml  CMakeLists.txt
service/itframework/: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt  README.md
(+101455 files in other folders)
